css/main.css
* {
  margin: 0;
}

/* text styles */

a {
  text-decoration: none;
  color: #402928;
  font-family: "Hoss Round", sans-serif;
  font-size: 24px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

h1 {
  font-size: 100%;
  font-weight: normal;
}

h2 {
  color: #402928;
  font-family: "Hoss Round", sans-serif;
  font-size: 35px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

h3 {
  color: #402928;
  font-family: "Hoss Round", sans-serif;
  font-size: 25px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

h4 {
  color: #402928;
  font-family: "Acumin Pro", sans-serif;
  font-size: 15px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

h5 {
  color: #402928;
  font-family: "Hoss Round", sans-serif;
  font-size: 15px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

p {
  color: #402928;
  font-family: "Acumin Pro", sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

button {
  color: #e9e7db;
  text-align: center;
  font-family: "Acumin Pro", sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.footer-title {
  color: #e9e7db;
  font-family: "Hoss Round", sans-serif;
  font-size: 35px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

footer ul {
  color: #e9e7db;
  font-family: "Acumin Pro", sans-serif;
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

small {
  color: #e9e7db;
  font-family: "Acumin Pro", sans-serif;
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

/* header */

.header-container {
  display: block;
  padding: 0 20px;
  background-color: #e9e7db;
  margin-top: 3vh;
  margin-bottom: 3vh;
}

.header-container h1 {
  float: left;
}

.wordmark {
  height: 38px;
  margin-left: 5vw;
}

.header-icons {
  height: 32px;
  width: 32px;
}

.site-nav ul {
  list-style-type: none;
  padding-left: 0;

  /* the following 2 lines of code are adapted from https://www.reddit.com/r/css/comments/1gvbks2/how_to_prevent_nav_bar_rollover_when_window_is/ */

  display: flex;
  margin-left: 45vw;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: right;
}

.site-nav li {
  margin-top: 0rem;
  margin-right: 5vw;

  /* the following 2 lines of code are adapted from https://stackoverflow.com/questions/572298/how-to-stop-text-from-taking-up-more-than-1-line */

  white-space: nowrap;
  overflow: hidden;
}

/* media query 1 - (max-width: 867px) HEADER */
@media screen and (max-width: 867px) {
  a {
    text-decoration: none;
    color: #402928;
    font-family: "Hoss Round";
    font-size: 20px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
  }
}

/* media query 2 - max-width: 550px HEADER */
@media screen and (max-width: 550px) {
  a {
    text-decoration: none;
    color: #402928;
    font-family: "Hoss Round";
    font-size: 15px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
  }

  .header-container h1 {
    display: flex;
    align-content: center;
    width: 45px;
  }

  .wordmark {
    height: 38px;
    margin-left: 80%;
    margin-bottom: 3vh;
  }

  .site-nav {
    flex-direction: column;
    align-items: center;
    gap: 1.5rem;
  }

  .site-nav ul {
    width: 100%;
    justify-content: space-between;
    margin-left: 0;
  }

  .header-icons {
    height: 20px;
    width: 20px;
  }
}

/* staffpicks */

body {
  background-color: #e9e7db;
  margin: 0;
}

/* the following 10 lines of code are adapted from https://codepen.io/xenvi/pen/JjXoeWz */

.suggestion-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  height: 100vh;
}

.image1 {
  background-image: url("../img/visuals/staffpick1.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.details {
  padding-top: 8rem;
  padding-left: 2rem;
  padding-right: 5rem;
  padding-bottom: 5rem;
  display: grid;
  flex-direction: column;
  gap: 1rem;
  align-content: start;
  overflow-y: auto;
  max-width: 80rem;
  overflow: hidden;
}

.add-to-cart-button {
  width: 5.8vw;
  height: auto;
  padding: 0.3rem 0.8rem 0.3rem 0.8rem;
  background: #8f7e2d;
  color: white;
  border: none;
  border-radius: 6px;
  cursor: pointer;
}

.remove-button {
  display: none;
  width: 5.8vw;
  height: auto;
  padding: 0.3rem 0.8rem 0.3rem 0.8rem;
  background: #be5846;
  color: white;
  border: none;
  border-radius: 6px;
  cursor: pointer;
}

.illustration {
  box-sizing: border-box;
  grid-row: 7;
  display: flex;
  align-items: center;
  margin-left: 25rem;
  height: auto;
  max-width: 338px;
  max-height: 462px;
  width: 100%;
  transform: rotate(-90deg);
  background-color: transparent;
}

/* media query 1 - (max-width: 867px) STAFFPICK */
@media screen and (max-width: 867px) {
  .suggestion-container {
    grid-template-columns: 1fr;
    grid-template-rows: 100vh 60vh;
    align-content: start;
    height: 160vh;
  }

  .details {
    grid-row: 2 / 3;
    padding-top: 3vh;
  }

  .illustration {
    box-sizing: border-box;
    grid-row: 7;
    display: none;
    align-items: center;
    margin-left: 25rem;
    height: auto;
    max-width: 338px;
    max-height: 462px;
    width: 100%;
    transform: rotate(-90deg);
    background-color: transparent;
  }

  .add-to-cart-button {
    width: fit-content;
    height: auto;
    margin-top: 1rem;
    padding: 0.3rem 0.8rem 0.3rem 0.8rem;
    background: #8f7e2d;
    font-size: 10px;
    color: white;
    border: none;
    border-radius: 6px;
    cursor: pointer;
  }

  .remove-button {
    display: none;
    width: 8.6vw;
    height: auto;
    margin-top: 1rem;
    padding: 0.3rem 0.8rem 0.3rem 0.8rem;
    background: #be5846;
    font-size: 10px;
    color: white;
    border: none;
    border-radius: 6px;
    cursor: pointer;
  }
}

/* media query 2 - max-width: 550px STAFFPICK */
@media screen and (max-width: 550px) {
  .suggestion-container {
    grid-template-columns: 1fr;
    grid-template-rows: 100vh 80vh;
    align-content: start;
    height: 180vh;
  }

  .details {
    grid-row: 2 / 3;
    padding-top: 3vh;
  }

  .illustration {
    box-sizing: border-box;
    grid-row: 7;
    display: none;
    align-items: center;
    margin-left: 25rem;
    height: auto;
    max-width: 338px;
    max-height: 462px;
    width: 100%;
    transform: rotate(-90deg);
    background-color: transparent;
  }

  .add-to-cart-button {
    width: 23vw;
    height: auto;
    padding: 0.3rem 0.8rem 0.3rem 0.8rem;
    background: #8f7e2d;
    color: white;
    border: none;
    border-radius: 6px;
    cursor: pointer;
  }

  .remove-button {
    display: none;
    width: 23vw;
    height: auto;
    padding: 0.3rem 0.8rem 0.3rem 0.8rem;
    background: #be5846;
    color: white;
    border: none;
    border-radius: 6px;
    cursor: pointer;
  }
}

/* footer */

footer {
  margin-top: 0rem;
  background-color: #402928;
  color: #e9e7db;
}

footer ul li {
  box-sizing: border-box;
  list-style: none;
  display: inline-flex;
  align-items: center;
  padding: 5rem;
  padding-top: 2.5rem;
}

small {
  color: #e9e7db;
  display: flex;
  padding-bottom: 40px;
  padding-left: 7rem;
}

.telephone {
  background: url(../img/icons/white_telephone_icon.svg);
  background-repeat: no-repeat;
  display: inline-block;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  padding-right: 3rem;
}

.instagram {
  background: url(../img/icons/white_instagram_icon.svg);
  background-repeat: no-repeat;
  display: inline-block;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  padding-right: 3rem;
}

.mail {
  background: url(../img/icons/white_mail_icon.svg);
  background-repeat: no-repeat;
  display: inline-block;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  padding-right: 3rem;
}

/* media query 1 - (max-width: 867px) FOOTER */
@media screen and (max-width: 867px) {
  .footer-title {
    color: #e9e7db;
    font-family: "Hoss Round";
    font-size: 25px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
  }

  footer ul {
    color: #e9e7db;
    font-family: "Acumin Pro";
    font-size: 15px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
  }

  small {
    color: #e9e7db;
    font-family: "Acumin Pro";
    font-size: 15px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    padding: 1rem;
    align-self: center;
  }

  .footer-container {
    display: flex;
    flex-direction: row;
  }

  .footer-container li {
    padding: 1rem 5rem 1rem 0;
  }

  .telephone {
    background: url(../img/icons/white_telephone_icon.svg);
    background-repeat: no-repeat;
    display: flex;
    width: 15px;
    height: 15px;
    box-sizing: border-box;
    padding-right: 3rem;
  }

  .instagram {
    background: url(../img/icons/white_instagram_icon.svg);
    background-repeat: no-repeat;
    display: flex;
    width: 15px;
    height: 15px;
    box-sizing: border-box;
    padding-right: 3rem;
  }

.mail {
  background: url(../img/icons/white_mail_icon.svg);
  background-repeat: no-repeat;
  display: flex;
  width: 15px;
  height: 15px;
  box-sizing: border-box;
  padding-right: 3rem;
}
}

